# scene_generation

./: .gitignore  .gitmodules  README.md
scene_robot/: .gitignore  README.md  pyproject.toml
scene_robot/scripts/: agibot_mouse_teleop_record.py  agibot_stack_cube.py  build_grasp_asset_cache.py  export_scene_grasp_proposals.py  grasp_annotate.py  kinova_mouse_teleop_record.py  kinova_stack_cube.py  r1lite_mouse_teleop_record.py  r1lite_stack_cube.py  real2sim_scale_randomize.py  scene_auto_grasp_collect.py  scene_auto_mouse_collect.py  scene_eval_policy.py  visualize_bolt_grasp_pose.py  visualize_ee_frame_offset_isaac.py  visualize_grasp_pose_isaac.py  visualize_grasp_proposals_open3d.py  visualize_real2sim_randomization.py  visualize_robot_workspaces.py  visualize_robot_workspaces_isaac.py
scene_robot/scripts/collect/: scene_auto_grasp_collect.py  scene_auto_mouse_collect.py  scene_eval_policy.py
scene_robot/scripts/demo/: agibot_mouse_teleop_record.py  agibot_stack_cube.py  kinova_mouse_teleop_record.py  kinova_stack_cube.py  r1lite_mouse_teleop_record.py  r1lite_stack_cube.py
scene_robot/scripts/grasp/: build_grasp_asset_cache.py  export_scene_grasp_proposals.py  grasp_annotate.py
scene_robot/scripts/real2sim/: real2sim_scale_randomize.py
scene_robot/scripts/visualize/: visualize_bolt_grasp_pose.py  visualize_ee_frame_offset_isaac.py  visualize_grasp_pose_isaac.py  visualize_grasp_proposals_open3d.py  visualize_real2sim_randomization.py  visualize_robot_workspaces.py  visualize_robot_workspaces_isaac.py
scene_robot/src/controller/: __init__.py  (+5 more)
(+241 files in other folders)
