[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scene-robot"
version = "0.1.0"
description = "Standalone custom robot assets, controllers, and Isaac Lab demos."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
controller = ["resources/**/*"]
scene_robot_assets = [
  "GEN3-7DOF-VISION_ROBOTIQ-2F85_COMBINED/**/*",
  "agibot/**/*",
  "r1lite/**/*",
]
